--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
+    "node": "^20.2.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
